// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Select Custom rendering 1`] = `
<div
  className="sc-frDJqD knwbUz"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDownCapture={[Function]}
  tabIndex={0}
>
  <div
    className="sc-hqyNC eDJwPQ"
    disabled={false}
  >
    <div
      className="sc-bwzfXH hUwEHM"
    >
      <div
        className="sc-bwzfXH iSqVrt"
        onClick={[Function]}
      >
        <div
          className="sc-bwzfXH fsbcIX"
        >
          <p
            className="sc-bxivhb jpeJmp"
          >
            Make a selection
          </p>
        </div>
      </div>
      <button
        className="sc-gqjmRU gIKjDZ sc-htoDjs ifkBJX"
        disabled={false}
        id={undefined}
        onClick={[Function]}
        title="open"
        type="button"
      >
        <span
          aria-hidden={true}
          className="sc-iwsKbI MOBcS"
          dangerouslySetInnerHTML={
            Object {
              "__html": "test-file-stub",
            }
          }
          role="img"
        />
      </button>
    </div>
  </div>
  <MockPortal>
    <div
      className="sc-kvZOFW iTUUXu"
    >
      <div
        className="sc-jDwBTQ iGblEK"
      >
        <div
          className="sc-gPEVay fErmnm"
        >
          <div
            data-test="bricks-select-collapse"
            style={
              Object {
                "display": "none",
                "overflow": "hidden",
              }
            }
          >
            <div
              className="sc-ksYbfQ gDblCm"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <div
                  className="sc-bwzfXH cozIiN"
                >
                  <div
                    className="sc-bwzfXH kcWmUX"
                  >
                    <img
                      src="https://picsum.photos/100/100?image=988"
                    />
                  </div>
                  <div
                    className="sc-bwzfXH bQfpwP"
                  >
                    <p
                      className="sc-bxivhb fpMQQD"
                    >
                      Bar A
                    </p>
                    <p
                      className="sc-bxivhb jpeJmp"
                    >
                      Lorem ipsum dolor sit amet.
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="sc-ksYbfQ gDblCm"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <div
                  className="sc-bwzfXH cozIiN"
                >
                  <div
                    className="sc-bwzfXH kcWmUX"
                  >
                    <img
                      src="https://picsum.photos/100/100?image=960"
                    />
                  </div>
                  <div
                    className="sc-bwzfXH bQfpwP"
                  >
                    <p
                      className="sc-bxivhb fpMQQD"
                    >
                      Foo B
                    </p>
                    <p
                      className="sc-bxivhb jpeJmp"
                    >
                      Lorem ipsum dolor sit amet.
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="sc-ksYbfQ gDblCm"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <div
                  className="sc-bwzfXH cozIiN"
                >
                  <div
                    className="sc-bwzfXH kcWmUX"
                  >
                    <img
                      src="https://picsum.photos/100/100?image=958"
                    />
                  </div>
                  <div
                    className="sc-bwzfXH bQfpwP"
                  >
                    <p
                      className="sc-bxivhb fpMQQD"
                    >
                      Bar C
                    </p>
                    <p
                      className="sc-bxivhb jpeJmp"
                    >
                      Lorem ipsum dolor sit amet.
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="sc-ksYbfQ gDblCm"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <div
                  className="sc-bwzfXH cozIiN"
                >
                  <div
                    className="sc-bwzfXH kcWmUX"
                  >
                    <img
                      src="https://picsum.photos/100/100?image=940"
                    />
                  </div>
                  <div
                    className="sc-bwzfXH bQfpwP"
                  >
                    <p
                      className="sc-bxivhb fpMQQD"
                    >
                      Foo D
                    </p>
                    <p
                      className="sc-bxivhb jpeJmp"
                    >
                      Lorem ipsum dolor sit amet.
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="sc-ksYbfQ gDblCm"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <div
                  className="sc-bwzfXH cozIiN"
                >
                  <div
                    className="sc-bwzfXH kcWmUX"
                  >
                    <img
                      src="https://picsum.photos/100/100?image=924"
                    />
                  </div>
                  <div
                    className="sc-bwzfXH bQfpwP"
                  >
                    <p
                      className="sc-bxivhb fpMQQD"
                    >
                      Bar E
                    </p>
                    <p
                      className="sc-bxivhb jpeJmp"
                    >
                      Lorem ipsum dolor sit amet.
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="sc-ksYbfQ gDblCm"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <div
                  className="sc-bwzfXH cozIiN"
                >
                  <div
                    className="sc-bwzfXH kcWmUX"
                  >
                    <img
                      src="https://picsum.photos/100/100?image=915"
                    />
                  </div>
                  <div
                    className="sc-bwzfXH bQfpwP"
                  >
                    <p
                      className="sc-bxivhb fpMQQD"
                    >
                      Bar F
                    </p>
                    <p
                      className="sc-bxivhb jpeJmp"
                    >
                      Lorem ipsum dolor sit amet.
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </MockPortal>
</div>
`;

exports[`Storyshots Select Default 1`] = `
<div
  className="sc-frDJqD knwbUz"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDownCapture={[Function]}
  tabIndex={0}
>
  <div
    className="sc-hqyNC eDJwPQ"
    disabled={false}
  >
    <div
      className="sc-bwzfXH hUwEHM"
    >
      <div
        className="sc-bwzfXH iSqVrt"
        onClick={[Function]}
      >
        <p
          className="sc-bxivhb jpeJmp"
        >
          <span
            className="sc-hmzhuo hgIEwm"
          >
            Search a value
          </span>
        </p>
      </div>
      <button
        className="sc-gqjmRU gIKjDZ sc-htoDjs ifkBJX"
        disabled={false}
        id={undefined}
        onClick={[Function]}
        title="open"
        type="button"
      >
        <span
          aria-hidden={true}
          className="sc-iwsKbI MOBcS"
          dangerouslySetInnerHTML={
            Object {
              "__html": "test-file-stub",
            }
          }
          role="img"
        />
      </button>
    </div>
  </div>
  <MockPortal>
    <div
      className="sc-kvZOFW iTUUXu"
    >
      <div
        className="sc-jDwBTQ iGblEK"
      >
        <div
          className="sc-gPEVay fErmnm"
        >
          <div
            data-test="bricks-select-collapse"
            style={
              Object {
                "display": "none",
                "overflow": "hidden",
              }
            }
          >
            <div
              className="sc-ksYbfQ gDblCm"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <span
                  className="sc-htpNat kTMegb"
                >
                  <p
                    className="sc-bxivhb fpMQQD"
                  >
                    Bar A
                  </p>
                </span>
              </div>
            </div>
            <div
              className="sc-ksYbfQ gDblCm"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <span
                  className="sc-htpNat kTMegb"
                >
                  <p
                    className="sc-bxivhb fpMQQD"
                  >
                    Foo B
                  </p>
                </span>
              </div>
            </div>
            <div
              className="sc-ksYbfQ gDblCm"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <span
                  className="sc-htpNat kTMegb"
                >
                  <p
                    className="sc-bxivhb fpMQQD"
                  >
                    Bar C
                  </p>
                </span>
              </div>
            </div>
            <div
              className="sc-ksYbfQ gDblCm"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <span
                  className="sc-htpNat kTMegb"
                >
                  <p
                    className="sc-bxivhb fpMQQD"
                  >
                    Foo D
                  </p>
                </span>
              </div>
            </div>
            <div
              className="sc-ksYbfQ gDblCm"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <span
                  className="sc-htpNat kTMegb"
                >
                  <p
                    className="sc-bxivhb fpMQQD"
                  >
                    Bar E
                  </p>
                </span>
              </div>
            </div>
            <div
              className="sc-ksYbfQ gDblCm"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <span
                  className="sc-htpNat kTMegb"
                >
                  <p
                    className="sc-bxivhb fpMQQD"
                  >
                    Bar F
                  </p>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </MockPortal>
</div>
`;
